--- a/models/staging/bingeflix/stg_bingeflix_events.yml
+++ b/models/staging/bingeflix/stg_bingeflix_events.yml
@@ -1,6 +1,6 @@
 models:
   - name: stg_bingeflix_events
-    description: This table contains information about the behavioral events.
+    description: '{{ doc("bingeflix_stg_bingeflix_events") }}'
     columns:
       - name: session_id
         description: The unique identifier of the session in the Bingeflix application.
@@ -8,7 +8,7 @@ models:
           - not_null
 
       - name: created_at
-        description: When the event was logged.
+        description: '{{ doc("bingeflix_created_at") }}'
         tests:
           - not_null
 
@@ -18,12 +18,12 @@ models:
           - not_null
 
       - name: event_name
-        description: The name of the event.
+        description: '{{ doc("bingeflix_event_name") }}'
         tests:
           - not_null
 
       - name: event_id
-        description: The unique identifier of the event.
+        description: '{{ doc("bingeflix_event_id") }}'
         tests:
           - not_null
           - unique
