--- a/models/staging/bingeflix/stg_bingeflix_subscription_plans.yml
+++ b/models/staging/bingeflix/stg_bingeflix_subscription_plans.yml
@@ -6,9 +6,6 @@ models:
         description: The unique identifier of the subscription plan.
         tests:
           - not_null
-          - unique
-          - accepted_values:
-              values: [1, 2, 3]
 
       - name: plan_name
         description: The name of the subscription plan.
@@ -19,6 +16,7 @@ models:
         description: The price of the subscription.
         tests:
           - not_null
+          - column_is_positive
 
       - name: payment_period
         description: The recurring payment period for the subscription.
